--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		     <div class="lists">
 			  <div class="list">
 			   <img src="https://raw.githubusercontent.com/rteinfoime/media2/main/covid.jpg" alt="paper photo">
-			   <p>In the aftermath of Pandemic<label for="ch"><a href="file:///D:/project1/proj3.html"> Show more</a></label> </P>
+			   <p>In the aftermath of Pandemic<label for="ch"><a href="https://rteinfoime.github.io/media3/"> Show more</a></label> </P>
 			</div>
 			  
 			 			  
